# rust-order-book

./: Cargo.toml  README.md  benchmarks.md
benches/: order_book_bench.rs  order_book_comparison_bench.rs  order_router_bench.rs  order_simulation.rs  shared_benchmark.rs
scripts/: parse_benchmarks.py
src/: lib.rs  main.rs
src/engine/: array_queue_order_book.rs  hashmap_order_book.rs  mod.rs  order_book.rs  order_book_trait.rs  priority_queue_order_book.rs
src/router/: book_route.rs  mod.rs  order_router.rs
src/types/: mod.rs  order.rs  symbol_mapping.rs
