[package]
name = "rust-order-book"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3" 
dashmap = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }
rustc-hash = "1.1"
crossbeam = "0.8"
core_affinity = "0.8"
heapless = "0.8"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"
hdrhistogram = "7"

[[bench]]
name = "order_book_bench"
harness = false

[[bench]]
name = "order_router_bench"
harness = false

[[bench]]
name = "order_book_comparison_bench"
harness = false